--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
   <title>Ciocle</title>
- <!-- branch test -->
+  <!-- branch test -->
   <link rel="shortcut icon" href="./favicon.ico">
 
   <meta name="Keywords" content="Capt,auspbro,导航,Ciocle," />
@@ -115,7 +115,7 @@ c
       <center>
         <form action="http://www.baidu.com/s" method="get" target="_blank">
           <!-- <input type="text" class="form-control" name="search" id="search" placeholder="输入关键词点击下方按钮即可检索！ " value="" baiduSug="2"> -->
-          <input type="text" class="form-control" name="search" id="search"  value="" baiduSug="2">
+          <input type="text" class="form-control" name="search" id="search" value="" baiduSug="2">
       </center>
     </P>
   </div>
@@ -147,18 +147,18 @@ c
 	描述：搜索完整代码
 -->
   <script charset="gbk" src="assets/js/baidu.js"></script>
-<script></script>
 
   <script>
     var sAddress = document.getElementsByTagName("form")[0];
     var sInfor = document.getElementById("search");
     var sBaidu = document.getElementById("baidu");
     var sGoogle = document.getElementById("google");
-    var staobao = document.getElementById("taobao");
     var sZhihu = document.getElementById("zhihu");
+    var staobao = document.getElementById("taobao");
+    var sWeixin = document.getElementById("weixin");
     var sweibo = document.getElementById("weibo");
     var sdouban = document.getElementById("douban");
-    var sWeixin = document.getElementById("weixin");
+    var smovie = document.getElementById("movie");
     var spanci = document.getElementById("panci");
     var sgithub = document.getElementById("github");
 
@@ -174,32 +174,13 @@ c
       sInfor.name = "q";
     };
 
-    //Google镜像  2017 年 2 月 11 日 更换
-   // $('#google1').click(function () {
-   //   var query = $('#search').val();
-   //   if (query) {
-   //     window.open("http://google.hbspy.moe/#q=" + query, "_blank");
-   //     return false;
-   //   };
-   // });
 
-
-    //京东（已修复）在移动端访问会跳出两次窗口（已修复）
-//    $('#jd').click(function () {
-//      var query = $('#search').val();
-//      if (query) {
-//        window.open("http://search.jd.com/Search?enc=utf-8&keyword=" + query, "_blank");
-//        return false;
-//      };
-//    });
-
-
-    //天猫  搜索需求下 暂时下架
-    //  stianmao.onclick=function(){
-    //    sAddress.action="https://list.tmall.com/search_product.htm?";
-    //    sInfor.name="q";
-    //    //sInfor.type="enc=utf-8";
-    //  }
+    //知乎
+    sZhihu.onclick = function () {
+      sAddress.action = "https://www.zhihu.com/search";
+      sInfor.name = "q";
+      sInfor.type = "question";
+    }
 
     //淘宝
     staobao.onclick = function () {
@@ -217,29 +198,12 @@ c
       };
     });
 
-    //知乎
-    sZhihu.onclick = function () {
-      sAddress.action = "https://www.zhihu.com/search";
-      sInfor.name = "q";
-      sInfor.type = "question";
-    }
-
     //微博
     $('#weibo').click(function () {
       var query = $('#search').val();
       if (query) {
         window.open("http://s.weibo.com/weibo/" + query, "_blank");
         return false;
-      };
-    });
-
-    //疯狂影视
-    $('#movie').click(function () {
-      var query = $('#search').val();
-      if (query) {
-        window.open("http://ifkdy.com/?q=" + query + "&p=1", "_blank");
-        return false;
-
       };
     });
 
@@ -250,15 +214,15 @@ c
       //sInfor.type="question";
     }
 
-    //改用网易云音乐检索 移动端检索出现异常
-    //  $('#gequ').click(function() {
-    //    var query = $('#search').val();
-    //    if ( query ) {
-    //      window.open("http://music.163.com/#/search/m/?s=" + query + "&type=1", "_blank");
-    //      return false;
-    //
-    //   	};
-    //  });
+    //疯狂影视
+    $('#movie').click(function () {
+      var query = $('#search').val();
+      if (query) {
+        window.open("http://ifkdy.com/?q=" + query + "&p=1", "_blank");
+        return false;
+
+      };
+    });
 
     // 胖次  另一个检索入口
     $('#panci').click(function () {
@@ -279,15 +243,6 @@ c
     }
 
 
-//去转盘
-//  $('#wangpan').click(function() {
-//      var query = $('#search').val();
-//      if ( query ) {
-//        window.open("http://www.quzhuanpan.com/source/search.action?q=" + query + "&currentPage=1", "_blank");
-//        return false;
-//
-//     	};
-//    });
   </script>
 
 </body>
@@ -295,15 +250,15 @@ c
 
 <!--谷歌统计代码 -->
 <script>
-        (function (i, s, o, g, r, a, m) {
-          i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-          }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+      (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-      ga('create', 'UA-105087262-1', 'auto');
-      ga('send', 'pageview');
+    ga('create', 'UA-105087262-1', 'auto');
+    ga('send', 'pageview');
 
 </script>
 
