--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <option id="lazyLoad">Lazy load</option>
     <option id="scrollingSpeed">Scrolling speed</option>
   </select> -->
-  
+
 
   <!-- <div id="actions">
     <a id="moveSectionUp" href="#">moveSectionUp</a>
@@ -291,6 +291,7 @@
     <li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li>
     <li data-menuanchor="4thpage"><a href="#4thpage">Fourth slide</a></li>
   </ul>
+  
   <div id="myContainer">
 
     <div class="section" id="section0">
@@ -334,17 +335,119 @@
             <input type="submit" value="源码" id="github" button type="button" class="btn btn-primary" />
           </center>
         </P>
+  
+
+	<!-- 作者：auspbro@gmail.com
+	时间：2017-08-20
+  描述：搜索完整代码 -->
+        <script charset="gbk" src="assets/js/baidu.js"></script>
+
+        <script>
+          var sAddress = document.getElementsByTagName("form")[0];
+          var sInfor = document.getElementById("search");
+          var sBaidu = document.getElementById("baidu");
+          var sGoogle = document.getElementById("google");
+          var sZhihu = document.getElementById("zhihu");
+          var staobao = document.getElementById("taobao");
+          var sWeixin = document.getElementById("weixin");
+          var sweibo = document.getElementById("weibo");
+          var sdouban = document.getElementById("douban");
+          var smovie = document.getElementById("movie");
+          var spanci = document.getElementById("panci");
+          var sgithub = document.getElementById("github");
+
+          //百度
+          sBaidu.onclick = function () {
+            sAddress.action = "https://www.baidu.com/s";
+            sInfor.name = "wd";
+          }
+
+          //Google
+          sGoogle.onclick = function () {
+            sAddress.action = "http://www.google.com/search";
+            sInfor.name = "q";
+          };
 
 
+          //知乎
+          sZhihu.onclick = function () {
+            sAddress.action = "https://www.zhihu.com/search";
+            sInfor.name = "q";
+            sInfor.type = "question";
+          }
+
+          //淘宝
+          staobao.onclick = function () {
+            sAddress.action = "https://s.taobao.com/search?";
+            sInfor.name = "q";
+          }
+
+          //微信
+          $('#weixin').click(function () {
+            var query = $('#search').val();
+            if (query) {
+              window.open("http://weixin.sogou.com/weixin?type=2&query=" + query + "&ie=utf8", "_blank");
+              return false;
+
+            };
+          });
+
+          //微博
+          $('#weibo').click(function () {
+            var query = $('#search').val();
+            if (query) {
+              window.open("http://s.weibo.com/weibo/" + query, "_blank");
+              return false;
+            };
+          });
+
+          //豆瓣
+          sdouban.onclick = function () {
+            sAddress.action = "https://www.douban.com/search?";
+            sInfor.name = "q";
+            //sInfor.type="question";
+          }
+
+          //疯狂影视
+          $('#movie').click(function () {
+            var query = $('#search').val();
+            if (query) {
+              window.open("http://ifkdy.com/?q=" + query + "&p=1", "_blank");
+              return false;
+
+            };
+          });
+
+          // 胖次  另一个检索入口
+          $('#panci').click(function () {
+            var query = $('#search').val();
+            if (query) {
+              window.open("http://www.panc.cc/s/" + query + "/td_0", "_blank");
+              return false;
+
+            };
+          });
+
+
+          //github
+          sgithub.onclick = function () {
+            sAddress.action = "https://github.com/search?";
+            //sInfor.type="author";
+            sInfor.name = "q";
+          }
+        </script>
 
       </div>
+      
       <div class="slide" id="slide1.2">
         <h1>Slide 1.2</h1>
       </div>
+
       <div class="slide" id="slide1.3">
         <h1>Slide 1.3</h1>
       </div>
     </div>
+
     <div class="section" id="section1">
       <div class="slide">
         <h1>Section 2</h1>
@@ -361,172 +464,30 @@
         <h1>Slide 2.3</h1>
       </div>
     </div>
+    
     <div class="section" id="section2">
       <h1>Section 3</h1>
     </div>
+
     <div class="section" id="section3">
       <h1>Section 4</h1>
     </div>
   </div>
-
-  <!-- <div class="container">
-        <div class="row LOGO">
-          <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
-            <P>
-              <center>
-                <a href="./index.html"><img id="LOGO" src="images/zen.png" width="35" height="35"  alt="Responsive image"></a>
-              </center>
-            </P>
-          </div>
-        </div>
-      </div> -->
-
-
-  <!-- <div>
-        <P>
-          <center>
-            <form action="http://www.baidu.com/s" method="get" target="_blank">
-              <input type="text" class="form-control" name="search" id="search" value="" baiduSug="2">
-            </form>
-          </center>
-        </P>
-      </div>
-     -->
-
-  <!-- <P>
-        <center>
-          <input type="submit" value="百度" id="baidu" button type="button" class="btn btn-primary" />
-          <input type="submit" value="谷歌" id="google" button type="button" class="btn btn-primary" />
-          <input type="submit" value="知乎" id="zhihu" button type="button" class="btn btn-primary" />
-          <input type="submit" value="淘宝" id="taobao" button type="button" class="btn btn-primary" />
-          <input type="submit" value="微信" id="weixin" button type="button" class="btn btn-primary" />
-          <input type="submit" value="微博" id="weibo" button type="button" class="btn btn-primary" />
-          <input type="submit" value="豆瓣" id="douban" button type="button" class="btn btn-primary" />
-          <input type="submit" value="影视" id="movie" button type="button" class="btn btn-primary" />
-          <input type="submit" value="网盘" id="panci" button type="button" class="btn btn-primary" />
-          <input type="submit" value="源码" id="github" button type="button" class="btn btn-primary" />
-        </center>
-      </P> -->
-
-
-  <!--
-	作者：auspbro@gmail.com
-	时间：2017-08-20
-	描述：搜索完整代码
--->
-  <!-- <script charset="gbk" src="assets/js/baidu.js"></script> -->
-
-  <!-- <script>
-    var sAddress = document.getElementsByTagName("form")[0];
-    var sInfor = document.getElementById("search");
-    var sBaidu = document.getElementById("baidu");
-    var sGoogle = document.getElementById("google");
-    var sZhihu = document.getElementById("zhihu");
-    var staobao = document.getElementById("taobao");
-    var sWeixin = document.getElementById("weixin");
-    var sweibo = document.getElementById("weibo");
-    var sdouban = document.getElementById("douban");
-    var smovie = document.getElementById("movie");
-    var spanci = document.getElementById("panci");
-    var sgithub = document.getElementById("github");
-
-    //百度
-    sBaidu.onclick = function () {
-      sAddress.action = "https://www.baidu.com/s";
-      sInfor.name = "wd";
-    }
-
-    //Google
-    sGoogle.onclick = function () {
-      sAddress.action = "http://www.google.com/search";
-      sInfor.name = "q";
-    };
-
-
-    //知乎
-    sZhihu.onclick = function () {
-      sAddress.action = "https://www.zhihu.com/search";
-      sInfor.name = "q";
-      sInfor.type = "question";
-    }
-
-    //淘宝
-    staobao.onclick = function () {
-      sAddress.action = "https://s.taobao.com/search?";
-      sInfor.name = "q";
-    }
-
-    //微信
-    $('#weixin').click(function () {
-      var query = $('#search').val();
-      if (query) {
-        window.open("http://weixin.sogou.com/weixin?type=2&query=" + query + "&ie=utf8", "_blank");
-        return false;
-
-      };
-    });
-
-    //微博
-    $('#weibo').click(function () {
-      var query = $('#search').val();
-      if (query) {
-        window.open("http://s.weibo.com/weibo/" + query, "_blank");
-        return false;
-      };
-    });
-
-    //豆瓣
-    sdouban.onclick = function () {
-      sAddress.action = "https://www.douban.com/search?";
-      sInfor.name = "q";
-      //sInfor.type="question";
-    }
-
-    //疯狂影视
-    $('#movie').click(function () {
-      var query = $('#search').val();
-      if (query) {
-        window.open("http://ifkdy.com/?q=" + query + "&p=1", "_blank");
-        return false;
-
-      };
-    });
-
-    // 胖次  另一个检索入口
-    $('#panci').click(function () {
-      var query = $('#search').val();
-      if (query) {
-        window.open("http://www.panc.cc/s/" + query + "/td_0", "_blank");
-        return false;
-
-      };
-    });
-
-
-    //github
-    sgithub.onclick = function () {
-      sAddress.action = "https://github.com/search?";
-      //sInfor.type="author";
-      sInfor.name = "q";
-    }
-
-
-  </script> -->
 
 </body>
 
 
 <!--谷歌统计代码 -->
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+       (function (i, s, o, g, r, a, m) {
+         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+           (i[r].q = i[r].q || []).push(arguments)
+         }, i[r].l = 1 * new Date(); a = s.createElement(o),
+           m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+       })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-105087262-1', 'auto');
-  ga('send', 'pageview');
+     ga('create', 'UA-105087262-1', 'auto');
+     ga('send', 'pageview');
 
 </script>
 
